@@ -983,6 +983,146 @@ block|{
 name|String
 name|id
 init|=
+name|toReadColumnIDString
+argument_list|(
+name|ids
+argument_list|)
+decl_stmt|;
+name|setReadColumnIDConf
+argument_list|(
+name|conf
+argument_list|,
+name|id
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * Sets read columns' ids(start from zero) for RCFile's Reader. Once a column    * is included in the list, RCFile's reader will not skip its value.    *     */
+specifier|public
+specifier|static
+name|void
+name|appendReadColumnIDs
+parameter_list|(
+name|Configuration
+name|conf
+parameter_list|,
+name|ArrayList
+argument_list|<
+name|Integer
+argument_list|>
+name|ids
+parameter_list|)
+block|{
+name|String
+name|id
+init|=
+name|toReadColumnIDString
+argument_list|(
+name|ids
+argument_list|)
+decl_stmt|;
+name|String
+name|old
+init|=
+name|conf
+operator|.
+name|get
+argument_list|(
+name|READ_COLUMN_IDS_CONF_STR
+argument_list|,
+literal|null
+argument_list|)
+decl_stmt|;
+name|String
+name|newConfStr
+init|=
+name|id
+decl_stmt|;
+if|if
+condition|(
+name|old
+operator|!=
+literal|null
+condition|)
+name|newConfStr
+operator|=
+name|newConfStr
+operator|+
+name|StringUtils
+operator|.
+name|COMMA_STR
+operator|+
+name|old
+expr_stmt|;
+name|setReadColumnIDConf
+argument_list|(
+name|conf
+argument_list|,
+name|newConfStr
+argument_list|)
+expr_stmt|;
+block|}
+specifier|private
+specifier|static
+name|void
+name|setReadColumnIDConf
+parameter_list|(
+name|Configuration
+name|conf
+parameter_list|,
+name|String
+name|id
+parameter_list|)
+block|{
+if|if
+condition|(
+name|id
+operator|==
+literal|null
+operator|||
+name|id
+operator|.
+name|length
+argument_list|()
+operator|<=
+literal|0
+condition|)
+block|{
+name|conf
+operator|.
+name|set
+argument_list|(
+name|READ_COLUMN_IDS_CONF_STR
+argument_list|,
+literal|""
+argument_list|)
+expr_stmt|;
+return|return;
+block|}
+name|conf
+operator|.
+name|set
+argument_list|(
+name|READ_COLUMN_IDS_CONF_STR
+argument_list|,
+name|id
+argument_list|)
+expr_stmt|;
+block|}
+specifier|private
+specifier|static
+name|String
+name|toReadColumnIDString
+parameter_list|(
+name|ArrayList
+argument_list|<
+name|Integer
+argument_list|>
+name|ids
+parameter_list|)
+block|{
+name|String
+name|id
+init|=
 literal|null
 decl_stmt|;
 if|if
@@ -1049,40 +1189,9 @@ expr_stmt|;
 block|}
 block|}
 block|}
-if|if
-condition|(
+return|return
 name|id
-operator|==
-literal|null
-operator|||
-name|id
-operator|.
-name|length
-argument_list|()
-operator|<=
-literal|0
-condition|)
-block|{
-name|conf
-operator|.
-name|set
-argument_list|(
-name|READ_COLUMN_IDS_CONF_STR
-argument_list|,
-literal|""
-argument_list|)
-expr_stmt|;
-return|return;
-block|}
-name|conf
-operator|.
-name|set
-argument_list|(
-name|READ_COLUMN_IDS_CONF_STR
-argument_list|,
-name|id
-argument_list|)
-expr_stmt|;
+return|;
 block|}
 comment|/**    * Returns an array of column ids(start from zero) which is set in the given    * parameter<tt>conf</tt>.    */
 specifier|public
